# card_dictionary

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle  gradle.properties
assets/data/adjective/: indexData  relationData  relationReference
assets/data/adverb/: indexData  relationData  relationReference
assets/data/noun/: indexData  relationReference
assets/data/verb/: indexData  relationData  relationReference
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: bridge_generated.dart  bridge_generated.freezed.dart  dictionary_app.dart  lib.dart  main.dart
lib/backend/: card_daos.dart  card_daos.g.dart  card_database.dart  card_database.g.dart  data.dart  data.freezed.dart  data.g.dart  dummy_data.dart  json_converter.dart  tables.dart
lib/frontend/: database_provider.dart  router.dart
lib/frontend/components/: card_definition.dart  card_pack_list.dart  card_viewer.dart  dictionary_search.dart  main_navigation_bar.dart  play_card.dart  recents.dart
lib/frontend/material/: color_schemes.g.dart  custom_color.dart  custom_color.g.dart  custom_color_gen.dart  theme_mixin.dart
lib/frontend/model/: dictionary_model.dart  main_navigation_model.dart  search_screen_model.dart
lib/frontend/pages/: card_pack_screen.dart  card_player.dart  (+3 more)
lib/general/: animator.dart  list.dart  single_animator.dart
rust/: Cargo.toml
rust/src/: api.rs  bridge_generated.rs  lib.rs
rust/src/wordnet/: counted_reader.rs  dictionary.rs  dictionary_data.rs  enum_types.rs  mod.rs  repository.rs  terms.rs  test.rs
test/: widget_test.dart
(+3 files in other folders)
