[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
flutter_rust_bridge = "1.41.3"
futures = "0.3"
tokio = { version = "1.21.0", features = [ "full"] }
anyhow = "1.0.64"
num_enum = "0.5.7"
once_cell = "1.14.0"
